@@ -11,3 +11,4 @@ extras_depend:
 xml:
     notification.xml
     ir.xml
+    message.xml
