@@ -1,3 +1,5 @@
+* Add optional subject to notifications
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Add commission agent as a recipient
